--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
+    "prop-types": "^15.6.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
-    "react-router": "^4.2.0",
-    "redux": "^3.0.4"
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.0.4",
+    "redux-form": "^7.2.0",
+    "redux-thunk": "^2.2.0"
   }
 }
