Install axios, redux-thunk, and signinUser action-creator

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
     "prop-types": "^15.6.0",
